# scale

./: README.md  compose.yaml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: dependabot.yml
.github/workflows/: docker-pyworker.yaml  docker-reactapp.yaml  docker-webapi.yaml  docker.yaml
apps/messages/: classify_obesity_level_request.proto  classify_obesity_level_response.proto  food_between_meals.proto  frequency.proto  obesity_level.proto  scale_service.proto  sex.proto  transportation.proto
apps/pyworker/: .gitignore  Dockerfile  README.md  compose.yaml  gen.sh  pyproject.toml  settings.yaml
apps/pyworker/.devcontainer/: Dockerfile  devcontainer.json
apps/pyworker/src/: app.py  config.py
apps/pyworker/src/scale/services/: ScaleService.py  __init__.py
apps/reactapp/: .dockerignore  Dockerfile  compose.yaml  index.html  package-lock.json  package.json  pnpm-lock.yaml
apps/reactapp/public/: config.js  site.webmanifest
apps/reactapp/src/: Layout.css  Layout.tsx  Results.tsx  Steps.tsx  main.tsx
apps/reactapp/src/services/: ApiService.ts
apps/reactapp/src/utils/: clamp.ts
apps/webapi/: Cargo.toml  Dockerfile  build.rs  compose.yaml  settings.yaml
apps/webapi/.devcontainer/: Dockerfile  devcontainer.json
apps/webapi/src/: api.rs  main.rs
apps/webapi/src/api/: main_api.rs
dataset/: README.md  dataset.csv  source.txt
notebooks/: .gitignore  01-data-exploration.ipynb  01-data-transform.ipynb  02-training.ipynb  03-training.ipynb  constants.py  pyproject.toml
notebooks/.devcontainer/: devcontainer.json
notebooks/utils/: CategoryMapper.py  __init__.py  _get_data.py  constants.py
