[project]
name = "scale-pyworker"
version = "0.1.0"

requires-python = ">=3.9"
# readme = "README.md"

classifiers = [
    "Private :: For educational use only."
]

dependencies = [
    "betterproto>=v2.0.0-beta7",
    "dynaconf>=3.2.10",
    "joblib>=1.4.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
]

[dependency-groups]
dev = [
    "betterproto[compiler]>=v2.0.0-beta7",
]
