[package]
name = "scaleapi"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
config = "0.15.11"
prost = "0.13.5"
serde = { version = "1.0", features = ["derive"] }
strum = "0.27.1"
strum_macros = "0.27.1"
tokio = { version = "1.0", features = ["full"] }
tonic = "0.12.3"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3", features = ["axum"] }

[build-dependencies]
tonic-build = "0.12.3"
